# actix-portier

./: Cargo.toml  Dockerfile  docker-compose.yaml  readme.md  rust-toolchain.toml
.github/workflows/: release.yml
conf/: base.yaml  portier.toml  prod.yaml  production.yaml
conf/portier/tmpl/: confirm_email.mustache  error.mustache  login_hint.mustache
src/: config.rs  errors.rs  main.rs  session_state.rs  startup.rs
src/authentication/: middleware.rs  mod.rs
src/routes/: login.rs  mod.rs  prelude.rs  session.rs
src/routes/dashboard/: mod.rs
static/: style.css
static/css/: style.css
templates/: dashboard.hbs  footer.hbs  index.hbs  links.hbs  login.hbs  scripts.hbs
templates/forms/: login.hbs
