[package]
name = "actix-portier"
version = "0.1.0"
edition = "2021"
authors = ["mpw <x@mpw.sh>", "LukeMathWalker <rust@lpalmieri.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-session = { version = "0.8.0", features = ["redis-rs-tls-session"] }
chrono = "0.4.31"
log = "0.4.20"
portier = "0.2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7.9"
anyhow = "1.0.75"
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
thiserror = "1.0.50"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.20.1"
serde-aux = "4.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
rand = { version = "0.8", features = ["std_rng"] }
actix-files = "0.6.2"
handlebars = { version = "4.5.0", features = ["dir_source"] }
serde_json = "1.0.108"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies",
] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix-portier"
